--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -1720,7 +1720,7 @@ th.apva-pvt-border {
 	font-size: 26px;
 }
 
-#apva-estimate-cost-verify-data p {
+#apva-estimate-cost-verify-data h3 {
 	font-size: 20px;
 }
 
