--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -16,11 +16,6 @@
     padding: 75px 0px;
 }
 
-#apva-carousel .owl-dots {
-    display: none;
-}
-
-
 .padding-lf-8 {
     padding: 0 8%;
 }
@@ -233,7 +228,7 @@ nav #user-icon {
 
 
 #psa-faq ul li {
-    list-style-image: url('https://dilsondecano.github.io/people-search-api/images/arrow-icon.png');
+    list-style-image: url('/images/arrow-icon.png');
     margin: 12px 0
 }
 
@@ -825,12 +820,12 @@ button.btn-most-recommended-dnone {
     font-weight: 700;
 }
 #pv-advanced-pricing-list li {
-    list-style-image: url(https://dilsondecano.github.io/people-search-api/images/orange-check-icon.png);
+    list-style-image: url(/images/orange-check-icon.png);
     color: #fff
 }
 
 #pv-advanceddnc-pricing-list li, #pv-basic-pricing-list li, #pv-complete-pricing-list li {
-    list-style-image: url(https://dilsondecano.github.io/people-search-api/images/green-check-icon.png);
+    list-style-image: url(/images/green-check-icon.png);
     color: #fff
 }
 
@@ -1025,7 +1020,7 @@ div#sb-adi-laptop {
     padding-bottom: 12px !important;
     padding-top: 0 !important;
     
-}
+}  
 
 #phone-validator-table div {
     text-align: center;
@@ -1037,8 +1032,8 @@ div#sb-adi-laptop {
 
     #phone-validator-table thead tr th {
         background: #ececec;
-        text-wrap: nowrap;
         text-align: center;
+        text-wrap: nowrap
     }
 
 th.apva-pvt-border {
@@ -1050,16 +1045,16 @@ th.apva-pvt-border {
     color: #505050
 }
 
-        #phone-validator-table a {
-        font-size: 14px;
-        text-wrap: nowrap;
-        background: var(--clr-orange);
-        color: #fff;
-        border: none;
-        padding: 1px 6px;
-        transition: 0.3s;
-        border-radius: 6px;
-    }
+#phone-validator-table a {
+    font-size: 14px;
+    text-wrap: nowrap;
+    background: var(--clr-orange);
+    color: #fff;
+    border: none;
+    padding: 1px 6px;
+    transition: 0.3s;
+    border-radius: 6px;
+}
 
 #phone-validator-table a:hover {
         
@@ -1067,6 +1062,8 @@ th.apva-pvt-border {
     text-decoration: none;
     
 }
+
+
 
 #apva-cpra .apva-input-radio, #apva-cpra .apva-api-type h3, #apva-cpra #apva-records-per-month {
     font-size: 20px;
@@ -1200,7 +1197,7 @@ th.apva-pvt-border {
 
 #apva-faq li {
     margin-top: 12px;
-    list-style-image: url(https://dilsondecano.github.io/people-search-api/images/arrow-icon.png);
+    list-style-image: url(/images/arrow-icon.png);
 }
 
 #apva-carousel {
@@ -1264,7 +1261,6 @@ th.apva-pvt-border {
 .owl-carousel .owl-prev {
     left: 0;
 }
-
     
 
 
@@ -1318,7 +1314,7 @@ th.apva-pvt-border {
     top: 386px;
     left: 700px;
 }
-}
+
 
 .apva-dnc-check-icon-tn {
     position: absolute;
@@ -1410,9 +1406,9 @@ th.apva-pvt-border {
 }
 
     .load-more-container .load-more:hover {
-        color: var(--clr-orange);
-        
+        color: var(--clr-orange);        
     }
+
 
 #ipa-hero h2 {
     font-size: 42px;
@@ -1714,43 +1710,263 @@ th.apva-pvt-border {
     display: none
 }
 
+#eva-email-verification-api h2 {
+    font-size: 26px;
+    font-weight: 700;
+    color: #505050
+}
+
+#eva-email-verification-api p {
+    font-size: 20px;
+    color: #505050
+}
+
+#eva-zip-code-to-timezome-api h2 {
+    font-size: 26px;
+    font-weight: 700;
+    color: #505050
+}
+
+#eva-zip-code-to-timezome-api p {
+    font-size: 20px;
+    color: #505050
+}
+
+#eva-zip-in-radius-api h2 {
+    font-size: 26px;
+    font-weight: 700;
+    color: #505050
+}
+
+#eva-zip-in-radius-api p {
+    font-size: 20px;
+    color: #505050
+}
+
+#eva-hero .eva-hero-images {
+    position: relative
+}
+
+#eva-hero .eva-validator-api-at img {
+    width: 92px;
+    position: absolute;
+    left: 28%;
+    top: 20%;
+}
+#eva-hero .eva-validator-api-clock img {
+    width: 92px;
+    position: absolute;
+    bottom: 35px;
+    right: 27%;
+}
+
+#eva-hero .eva-pin-icon img {
+    width: 60px;
+    position: absolute;
+    right: 35%;
+}
+
+#eva-card-carousel {
+    background: #ededed
+}
+
+#eva-card-carousel .card {
+    border-radius: 30px;
+}
+
+    #eva-card-carousel a {
+        font-size: 16px;
+        color: var(--clr-orange);
+        font-weight: 700
+    }
+
+#eva-card-carousel .card-title {
+    font-size: 26px;
+    font-weight: 700;
+    color: #505050
+}
+
+#eva-card-carousel p {
+    font-size: 20px;
+    color: #505050;
+    line-height: 1.4rem;
+}
+
+#eva-estimate-your-cost h3 {
+    font-size: 26px;
+    font-weight: 700;
+    color: #505050;
+    text-align: center
+}
+
+#eva-records-per-month input[type="text"] {
+    width: 600px;
+    max-width: 100%;
+    border-radius: 16px;
+    border: solid 2px #505050;
+    padding: 10px 30px;
+    margin: 0 30px;
+}
+
+#eva-estimate-your-cost #eva-records-per-month {
+    font-size: 20px;
+    color: #505050;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-wrap: nowrap;
+}
+
+#eva-estimate-your-cost th {
+    background: var(--clr-orange);
+    color: #fff;
+    font-weight: 700;
+    padding: 12px;
+    text-align: center;
+    border-radius: 16px 16px 0 0;
+}
+
+#eva-estimate-your-cost td {
+    background: #ededed;
+    color: #6f6f6f;
+    font-weight: 700;
+    padding: 12px;
+    border-radius: 0 0 16px 16px;
+    font-size: 20px;
+    text-align: center;
+}
+
+#eva-estimate-your-cost input[type = "radio"]:checked + label {
+    color: var(--clr-orange);
+}
+
+#eva-estimate-your-cost .eva-api-type {
+    font-weight: 700;
+    font-size: 21px;
+    color: #505050
+}
+
+#eva-estimate-your-cost table {
+    margin: 60px 0;
+}
+
+#eva-estimate-your-cost #eva-sst-header {
+    font-size: 18px;
+    font-weight: 700;
+    color: #505050;
+    text-align: left
+}
+
+#eva-estimate-your-cost .eva-api-type {
+    display: flex;
+    
+    justify-content: space-evenly;
+}
+
 @media (max-width: 576px) {
 
+    #eva-estimate-your-cost .eva-estimate-your-cost {
+        background: #fff;
+        border-radius: 16px;
+        border: 2px solid var(--clr-orange);
+        padding: 20px 60px;
+    }
+
+    #eva-estimate-your-cost .eva-api-type {
+        font-size: 20px;
+        font-weight: 400
+    }
+
+    #eva-estimate-your-cost input[type = "radio"]:checked + label {
+        color: #505050;
+    }
+
+    #eva-records-per-month input[type="text"] {
+        background: #ededed;
+        border: none;
+    }
+
+        #eva-records-per-month input[type="text"]::placeholder {
+            font-size: 18px;
+            text-align: center;
+            color: #aaa
+        }
+
+    #eva-estimate-your-cost h3 {
+        color: var(--clr-orange);
+    }
+
+    #eva-estimate-api-documentation p {
+        font-size: 16px
+    }
+
+    #eva-hero h2 {
+        font-size: 26px;
+        text-align: left
+    }
+
+    #eva-hero h3 {
+        font-size: 33px;
+        text-align: left
+    }
+
+    #eva-hero p {
+        font-size: 16px;
+        text-align: left
+    }
+
+    #eva-card-carousel .card-title {
+        font-size: 25px;
+    }
+
+    #eva-card-carousel p {
+        font-size: 18px;
+    }
+
+    #eva-card-carousel a {
+        font-size: 15px;
+    }
+
     #apva-estimate-cost-verify-data h2 {
-	font-size: 26px;
-}
+        font-size: 26px;
+    }
 
-#apva-estimate-cost-verify-data h3 {
-	font-size: 20px;
-}
+    #apva-estimate-cost-verify-data h3 {
+        font-size: 20px;
+    }
 
-	#apva-estimate-cost-verify-data img {
-    width: 132px;
-}
+    #apva-estimate-cost-verify-data img {
+        width: 132px;
+    }
 
     #apva-cta {
-    background: #fff;
-}
+        background: #fff;
+    }
+
+
     .pvt-clock-icon {
-    width: 90px;
-    right: 12px;
-    bottom: 0;
-    top: -39px;
-}
+        width: 90px;
+        right: 12px;
+        bottom: 0;
+        top: -39px;
+    }
 
     .pvt-pin-icon {
         width: 55px;
         left: -18px;
         top: 10%;
     }
-       #phone-validator-table h2 {
-       display: block;
-       font-size: 26px;
-       font-weight: 700;
-       color: #fff;
-       text-align: left;
-       margin-bottom: 21px;
-   }
+
+    #phone-validator-table h2 {
+        display: block;
+        font-size: 26px;
+        font-weight: 700;
+        color: #fff;
+        text-align: left;
+        margin-bottom: 21px;
+    }
+
     #eva-faq h2 {
         font-size: 26px;
         border-bottom: 3px solid var(--clr-orange);
@@ -1759,6 +1975,7 @@ th.apva-pvt-border {
     #eva-faq li {
         font-size: 16px;
     }
+
 
     .eva-cta-btn-desktop {
         display: none;
@@ -1820,6 +2037,7 @@ th.apva-pvt-border {
             #apva-faq li {
                 font-size: 16px;
             }
+
 
 
             .btn-orange {
@@ -2004,9 +2222,24 @@ th.apva-pvt-border {
         }
 
         @media (max-width: 991px) {
-            .cost-estimate-form {
-                padding-bottom: 0px !important;
+
+            #eva-estimate-your-cost .eva-api-type {
+                flex-direction: column;
             }
+
+            #eva-estimate-your-cost #eva-records-per-month {
+                flex-direction: column;
+                margin-top: 30px;
+            }
+
+            #eva-estimate-your-cost #eva-records-per-month button {
+                margin-top: 30px;
+            }
+
+
+                .cost-estimate-form {
+                    padding-bottom: 0px !important;
+                }
 
             #ao-use-batch-append-tool .container {
                 flex-direction: column;
