--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -131,7 +131,7 @@
 
 
 #people-search-api-hero {
-    background: url("https://dilsondecano.github.io/people-search-api/images/psabg.png") no-repeat bottom;
+    background: url("/images/psabg.png") no-repeat bottom;
     background-size: cover
 }
 
@@ -275,7 +275,7 @@ nav #user-icon {
 
 
 #psa-faq ul li {
-    list-style-image: url("https://dilsondecano.github.io/people-search-api/images/arrow-icon.png");
+    list-style-image: url('/images/arrow-icon.png');
     margin: 12px 0
 }
 
@@ -437,10 +437,10 @@ nav #user-icon {
     gap: 12px
 }
 
+
 #ao-brand-customer-partners .brand-customers-partner-img {
     width: 200px;
     margin: 0 auto;
-
 }
 
 #ao-brand-customer-partners h2 {
@@ -603,9 +603,9 @@ nav #user-icon {
      background: #373737;        
 }
 
-#ao-card-carousel a:hover .arrow-icon {
-    transform: translateX(10px)
-}
+    #ao-card-carousel a:hover .arrow-icon {
+        transform: translateX(10px)
+    }
 
 #ao-card-carousel a > img {
     width: 16px
@@ -859,12 +859,12 @@ button.btn-most-recommended-dnone {
     font-weight: 700;
 }
 #pv-advanced-pricing-list li {
-    list-style-image: url("https://dilsondecano.github.io/people-search-api/images/orange-check-icon.png");
+    list-style-image: url(/images/orange-check-icon.png);
     color: #fff
 }
 
 #pv-advanceddnc-pricing-list li, #pv-basic-pricing-list li, #pv-complete-pricing-list li {
-    list-style-image: url("https://dilsondecano.github.io/people-search-api/images/green-check-icon.png");
+    list-style-image: url(/images/green-check-icon.png);
     color: #fff
 }
 
@@ -889,36 +889,26 @@ button.btn-most-recommended-dnone {
     display: flex;
 }
 
-#ao-brand-customers span.brand-customers-orange {
-    font-size: 42px;
+#ao-brand-customers-partners span.brand-customers-orange {
+    font-size: 40px;
     color: var(--clr-orange);
     font-weight: 700;
 }
 
-#ao-brand-customers h2 {
-    font-size: 42px;
+#ao-brand-customers-partners h2 {
+    font-size: 40px;
     color: #373737;
     font-weight: 700;
 }
 
-/*
-.owl-carousel img {
-    width: 120px !important;
-}
-.owl-carousel {
-    width: 70% !important
+#ao-brand-customers-partners .ao-logo-carousel img {
+    width: 140px;
+    margin: 0 auto
 }
 
-    .owl-carousel .owl-next {
-        right: 0;
-    }
-
-    .owl-carousel .owl-next, .owl-carousel .owl-prev {
-        position: absolute;
-        top: 50%;
-    }
-
-    */
+#ao-brand-customers-partners .ao-logo-carousel .owl-dots {
+    display: none;
+}
 
 #ao-sb-adi {
     position: relative;
@@ -1236,7 +1226,7 @@ th.apva-pvt-border {
 
 #apva-faq li {
     margin-top: 12px;
-    list-style-image: url("https://dilsondecano.github.io/people-search-api/images/arrow-icon.png");
+    list-style-image: url(/images/arrow-icon.png);
 }
 
 #apva-carousel {
@@ -1282,9 +1272,11 @@ th.apva-pvt-border {
 
 .owl-carousel .owl-next, .owl-carousel .owl-prev {
     position: absolute;
-    top: 25%;
+    top: 50%;
     
 }
+
+
 
     .owl-carousel .owl-next span, .owl-carousel .owl-prev span {
         font-size: 40px;
@@ -1294,7 +1286,7 @@ th.apva-pvt-border {
 
 
 .owl-carousel .owl-next {
-    right: -25px;
+    right: 0;
 }
 
 .owl-carousel .owl-prev {
@@ -1557,7 +1549,7 @@ th.apva-pvt-border {
     }
 
     #ipa-faq ul li {
-        list-style-image: url("https://dilsondecano.github.io/people-search-api/images/arrow-icon.png");
+        list-style-image: url('/images/arrow-icon.png');
         margin: 12px 0
     }
 
@@ -1681,7 +1673,7 @@ th.apva-pvt-border {
 
     #eva-faq li {
         margin-top: 12px;
-        list-style-image: url("https://dilsondecano.github.io/people-search-api/images/arrow-icon.png");
+        list-style-image: url(/images/arrow-icon.png);
     }
 
 #eva-estimate-cost-verify-data h2 {
@@ -1925,13 +1917,18 @@ th.apva-pvt-border {
 
 @media (max-width: 576px) {
 
-    #psa-people-search-api-list .p-5 {
-    padding: 30px !important
-}
+    ##psa-estimate-cost .psa-amreh-table {
+        font-size: 16px !important
+    }
 
-        #psa-faq > .container > div {
+    #psa-people-search-api-list .p-5 {
+        padding: 30px !important
+    }
+
+    #psa-faq > .container > div {
        padding: 30px;
     }
+
     #psa-estimate-cost input[type="text"] {
         border-radius: 16px
     }
