--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -2102,8 +2102,7 @@ th.apva-pvt-border {
     }
 
     #ao-use-batch-append-tool img {
-        width: 120px;
-        margin-left: -90px
+display: nope
     }
 
 
