--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -1320,7 +1320,7 @@ th.apva-pvt-border {
         background: white;
         border-radius: 16px;
         margin: 5px 13px;
-        padding: 16px 16px;
+        padding: 24px;
     }
 
 #apva-carousel .owl-dots {
